--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <script src="https://cdn.staticfile.org/echarts/5.4.3/echarts.min.js"></script>
 <script src="https://cdn.staticfile.org/vue/3.3.4/vue.runtime.global.prod.min.js"></script>
 <script src="https://cdn.staticfile.org/element-plus/2.3.14/index.full.min.js"></script>
-    <meta name="keywords" content="网络面板,网络面板官网,网络测速,网速测试,ljxnet,Whoami,flowloss,流量消耗器,流量消耗,定向流量消耗">
-    <meta name="description" content="网络面板(NetworkPanel)是一个在线流量消耗器，可以测试您的网速，监测您的网络环境，提供丰富测试节点，并且长期维护更新">
+    <meta name="keywords" content="NetwebSpeed">
+    <meta name="description" content="NetwebSpeed在线消耗">
     <meta property="og:image" content="./seo.png">
     <meta name="author" content="Whoami">
     <meta name="color-scheme" content="light dark">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="网络面板"/>
+    <meta name="apple-mobile-web-app-title" content="NetwebSpeed"/>
     <meta name="format-detection" content="telephone=no">
     <link rel="apple-touch-icon-precomposed" href="./icon-fill.png">
     <meta name="msapplication-TileImage" content="./icon-fill.png">
